cada produto tem a sua pagina

--- a/React_Store/React_Store/src/components/Promocao_home.css
+++ b/React_Store/React_Store/src/components/Promocao_home.css
@@ -46,3 +46,10 @@
 .produtos_text{
     margin-left: 40px;
 }
+.product_descont_price{
+    display: flex;
+    gap: 5px;
+}
+#descont_price{
+    color: rgb(188, 2, 2);
+}
