--- a/React_Store/React_Store/src/components/NavBar.css
+++ b/React_Store/React_Store/src/components/NavBar.css
@@ -38,6 +38,10 @@
     width: 50px;
     height: 50px;
 }
+#big_nav_element_img{
+    display: flex;
+    flex-direction: column;
+}
 .big_nav_element_img:hover{
     background-color: transparent;
 }
