--- a/React_Store/React_Store/src/Pages/Carrinho.css
+++ b/React_Store/React_Store/src/Pages/Carrinho.css
@@ -30,3 +30,9 @@
     justify-content: center;
     align-items: center;
 }
+.nao_temos_produtos{
+    display: flex;
+    justify-content: center;
+    max-width: 1400px;
+    width: 90vw;
+}
