--- a/React_Store/React_Store/src/App.css
+++ b/React_Store/React_Store/src/App.css
@@ -2,4 +2,8 @@
     min-width: 100vh;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
