telas feitas, comecando a fazer NavBar responsivo

--- a/React_Store/React_Store/src/Pages/Promocao.css
+++ b/React_Store/React_Store/src/Pages/Promocao.css
@@ -32,3 +32,9 @@
 #product_promocao_1 .produto_em_prom_text{
     left: 0;
 }
+@media(max-width:400px) {
+    .prom_produtos{
+        flex-direction: column;
+        gap: 20px;
+    }
+}
