--- a/React_Store/React_Store/src/components/Destaque.css
+++ b/React_Store/React_Store/src/components/Destaque.css
@@ -46,3 +46,8 @@
 .produtos_text{
     margin-left: 40px;
 }
+@media(max-width:400px) {
+    .produtos_destaque_container{
+        flex-direction: column;
+    }
+}
