--- a/React_Store/React_Store/src/components/Search_box.css
+++ b/React_Store/React_Store/src/components/Search_box.css
@@ -30,4 +30,10 @@
 }
 #input_text:focus {
     border-style: none;
-  }
+}
+@media (max-width:400px) {
+    .input_search_box{
+        justify-content: end;
+        align-items: center;
+    }
+}
