--- a/React_Store/React_Store/src/App.css
+++ b/React_Store/React_Store/src/App.css
@@ -1,9 +1,16 @@
 .container{
-    min-width: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+@media(max-width:400px) {
+    .container{
+       max-width: 400px;
+       overflow-x: hidden;
+    }
+    
 }
