--- a/React_Store/React_Store/src/Pages/Products.css
+++ b/React_Store/React_Store/src/Pages/Products.css
@@ -1,3 +1,8 @@
+.title_products{
+    font-family: sans-serif;
+    color: #DB4A2B;
+    margin: auto;
+}
 .products_prin_container{
     max-width: 1440px;
     width: 90vw;
@@ -82,4 +87,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+@media (max-width:400px) {
+    .products_container{
+        flex-direction: column;
+    }
+    .products_products{
+        margin-top: 30px;
+        width: 90vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+    .categorias{
+        width: 170px;
+    }
+    .products_select_cat{
+        margin: 0;
+        align-items: center;
+    }
 }
