--- a/React_Store/React_Store/src/components/Facilidades.css
+++ b/React_Store/React_Store/src/components/Facilidades.css
@@ -17,6 +17,9 @@
     align-items: center;
     gap: 20px;
 }
+.facilidades_text{
+    font-size: .9em;
+}
 #facilidade_3{
     margin-right: 20px;
 }
@@ -31,4 +34,21 @@
 }
 #facilidade_1 .facilidades_text h2{
     margin: 5px 0;
+}
+@media (max-width:400px) {
+    .facilidades_container{
+        flex-wrap: wrap;
+        justify-content: center;
+        height: 400px;
+    }
+    .facilidades{
+        width: 80vw;
+        justify-content: space-between;
+    }
+    #facilidade_3{
+        margin-right: 0;
+    }
+    #facilidade_1{
+        margin-left: 0;
+    }
 }
