--- a/React_Store/React_Store/src/components/Footer.css
+++ b/React_Store/React_Store/src/components/Footer.css
@@ -69,3 +69,35 @@
     width: 200px;
     border-radius: 20px;
 }
+@media(max-width:400px) {
+    .footer_conteudo{
+        flex-direction: column;
+        height: 100vh;
+        justify-content: none;
+    }
+    .footer_div{
+        height: 900px;
+    }
+    .footer_saber_form{
+        width: 80vw;
+    }
+    .footer_map_logo{
+        width: 80vw;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .footer_saber_form{
+        height: 240px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer_saber_form_text p{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .footer_saber_form_form form{
+        margin: 10px 0;
+    } 
+}
