--- a/React_Store/React_Store/src/components/Promocao_text_home.css
+++ b/React_Store/React_Store/src/components/Promocao_text_home.css
@@ -13,3 +13,16 @@
     font-weight: bold;
     font-size: 1.9em;
 }
+@media(max-width:400px) {
+    .promocao_title{
+        width: 85vw;
+    }
+    #promocao_title_1, #promocao_title_2{
+        font-size: .9em;
+    }
+    .promocao_tile_motion_Div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
