--- a/React_Store/React_Store/src/components/banner.css
+++ b/React_Store/React_Store/src/components/banner.css
@@ -64,3 +64,47 @@
         left: -20px;
     }
 }
+@media (min-width:401px) and (max-width:576px) {
+    .banner_container{
+        flex-direction: column;
+    }
+    .banner_text_text h1{
+        font-size: 1.7em;
+    }
+    .banner_text_text{
+        position: relative;
+        left: -30px;
+    }
+    .banner_img img{
+        width: 90vw;
+    }
+    .banner_text_emoji img{
+        width: 50px;
+    }
+    .banner_text_emoji{
+        position: relative;
+        left: -20px;
+    }
+}
+@media (min-width:577px) and (max-width:767px) {
+    .banner_container{
+        flex-direction: column;
+    }
+    .banner_text_text h1{
+        font-size: 2.7em;
+    }
+    .banner_text_text{
+        position: relative;
+        left: -30px;
+    }
+    .banner_img img{
+        width: 90vw;
+    }
+    .banner_text_emoji img{
+        width: 70px;
+    }
+    .banner_text_emoji{
+        position: relative;
+        left: -20px;
+    }
+}
