--- a/React_Store/React_Store/src/Pages/Carrinho.css
+++ b/React_Store/React_Store/src/Pages/Carrinho.css
@@ -36,3 +36,35 @@
     max-width: 1400px;
     width: 90vw;
 }
+@media (max-width:400px) {
+    .produtos_do_carrinho{
+        max-width: 400px;
+        flex-direction: column;
+    }
+    .total_value{
+        text-align: center;
+        flex-direction: column;
+    }
+    .text_but{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 20px;
+    }
+}
+@media (min-width:401px) and (max-width:576px){
+    .produtos_do_carrinho{
+        max-width: 400px;
+        flex-direction: column;
+    }
+    .total_value{
+        text-align: center;
+        flex-direction: column;
+    }
+    .text_but{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 20px;
+    }
+}
