--- a/React_Store/React_Store/src/components/Complete_outfit.css
+++ b/React_Store/React_Store/src/components/Complete_outfit.css
@@ -4,7 +4,39 @@
     max-width: 1440px;
     width: 90vw;
     margin: auto;
+    gap: 30px;
 }
 #produtos_text{
     margin: 0;
+}
+@media(max-width:400px) {
+    .complete_outfit_container{
+        width: 90vw;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+}
+@media (min-width:401px) and (max-width:576px){
+    .complete_outfit_container{
+        width: 90vw;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+}
+@media (min-width:577px) and (max-width:767px) {
+    .complete_outfit_container{
+        width: 90vw;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+    .complete_outfit_container::-webkit-scrollbar-thumb{
+        color: black;
+    }
+}
+@media (min-width: 768px) and (max-width: 967px) {
+    .complete_outfit_container{
+        width: 90vw;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
 }
