--- a/React_Store/React_Store/src/components/Destaque.css
+++ b/React_Store/React_Store/src/components/Destaque.css
@@ -51,3 +51,32 @@
         flex-direction: column;
     }
 }
+@media (min-width:401px) and (max-width:576px){
+    .produtos_destaque_container{
+        flex-direction: column;
+    }
+}
+@media (min-width: 577px) and (max-width:767px){
+    .produtos_destaque_container{
+        width: 90vw;
+        flex-wrap: wrap;
+    }
+}
+@media (min-width: 768px) and (max-width: 967px) {
+    .produtos_destaque_container{
+        width: 90vw;
+        flex-wrap: wrap;
+    }
+}
+@media (min-width: 968px) and (max-width:1200px) {
+    .produtos_destaque_container{
+        width: 90vw;
+        flex-wrap: wrap;
+    }
+}
+@media (min-width:1201px) {
+    .produtos_destaque_container{
+        width: 90vw;
+        flex-wrap: wrap;
+    }
+}
