--- a/React_Store/React_Store/src/components/NavBar.css
+++ b/React_Store/React_Store/src/components/NavBar.css
@@ -1,48 +1,98 @@
-.principal_nav{
-    font-family: 'Comico', cursive;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90vw;
-    max-width: 1400px;
-    margin: auto;
+img{
+    width: 90px;
 }
-.big_screen_nav{
-    display: flex;
-    gap: 60px;
-}
-.big_nav_element{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.big_nav_element a{
-    text-decoration: none;
-    color: #DB4A2B;
-    font-size: 1.5em;
-}
-.big_nav_element a:hover{
-    color: #25962b;
-}
-.logo{
-    width: 150px;
-}
-.nav_img{
-    width: 70px;
-    height: 70px;
-    background-color: #BABABA;
-    border-radius: 20px;
-    transition: .4s;
-}
-#big_nav_element_img img {
-    width: 50px;
-    height: 50px;
-}
-#big_nav_element_img{
-    display: flex;
-    flex-direction: column;
-}
-.big_nav_element_img:hover{
-    background-color: transparent;
+:root {
+    --mainColor: #E4E2DD;
+    --mainColorLight: #5767aa;
+    --secondaryColor: #db2b39;
+    --textColor: #DB4A2B;
 }
 
+header {
+    display: flex;
+    max-width: 1400px;
+    margin: auto;
+    align-items: center;
+    justify-content: space-between;
+    height: 110px;
+    padding: 0 2rem;
+    background-color: var(--mainColor);
+    color: var(--textColor);
+    font-family: 'Comico', cursive;
+    z-index: 1000;
+    width: 100vw;
+}
+
+nav a {
+    margin: 0 1rem;
+    color: var(--textColor);
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: var(--secondaryColor);
+}
+
+header .nav-btn {
+    padding: 5px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: var(--textColor);
+    visibility: hidden;
+    opacity: 0;
+    font-size: 1.8rem;
+}
+
+header div,
+nav {
+    display: flex;
+    align-items: center;
+}
+.opcoes_Navbar{
+    display: flex;
+    justify-content: center;
+}
+.carrinho_img img{
+    width: 40px;
+}
+#home_link, #products_link {
+    font-size: 1.7em;
+}
+@media only screen and (max-width: 1024px) {
+    header .nav-btn {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    header nav {
+        position: fixed;
+        top: -100vh;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1.5rem;
+        background-color: var(--mainColor);
+        transition: 1s;
+    }
+
+    header .responsive_nav {
+        transform: translateY(100vh);
+    }
+
+    nav .nav-close-btn {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+    }
+
+    nav a {
+        font-size: 1.5rem;
+    }
+    
+}
