todas as funcoes acabadas, falta so animar os prod

--- a/React_Store/React_Store/src/components/Frete.css
+++ b/React_Store/React_Store/src/components/Frete.css
@@ -25,6 +25,9 @@
     align-items: center;
     border-radius: 10px 10px 0 0;
 }
+.info_frete_div{
+  width: 530px;
+}
 .frete_calc_input button img{
     width: 50px;
 }
