--- a/React_Store/React_Store/src/components/Tamanhos.css
+++ b/React_Store/React_Store/src/components/Tamanhos.css
@@ -16,3 +16,11 @@
     border: 2px solid #DB4A2B;
     border-radius: 10px;
 }
+.tamanho:hover {
+    background-color: #DB4A2B;
+    color: white;
+}
+.selecionado{
+    background-color: #DB4A2B;
+    color: white;
+}
