--- a/React_Store/React_Store/src/components/Complete_outfit.css
+++ b/React_Store/React_Store/src/components/Complete_outfit.css
@@ -2,6 +2,7 @@
     font-family: sans-serif;
     display: flex;
     max-width: 1440px;
+    justify-content: center;
     width: 90vw;
     margin: auto;
     gap: 30px;
