fazendo as telas dos produtos

--- a/React_Store/React_Store/src/products_pages/Moletom_jordan_jb.css
+++ b/React_Store/React_Store/src/products_pages/Moletom_jordan_jb.css
@@ -15,6 +15,11 @@
     flex-direction: column;
     gap: 30px;
 }
+.complete_outfit_div_title{
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+}
 .complete_outfit_div_title h1{
     color: #DB4A2B;
 }
